--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
     ]
   },
   "devDependencies": {},
-  "homepage": "http://psl-app-vm3/AmeyawBuild"
+  "homepage": "http://psl-app-vm3/AmeyawBuild" // url to server location
 }
